<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>trex-simple-journal</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>trex-simple-journal</name>
    <url>https://github.com/trex-paxos/trex-paxos-jvm</url>
    <description>
        A simple Journal that rotates files and uses java.nio with no flush to disk that is only
        crash durable when you distribute five or more nodes across three or more resilience zones.
    </description>
    <parent>
        <groupId>com.github.trex-paxos</groupId>
        <artifactId>trex2</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <maven.compiler.release>23</maven.compiler.release>
        <maven.compiler.args>--enable-preview</maven.compiler.args>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.github.trex-paxos</groupId>
            <artifactId>trex2-lib</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.11.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
